# ChainImpact

./: README.md  package-lock.json  package.json  program-keypair.json
app/: layout.tsx  page.tsx
app/auth/login/: page.tsx
app/auth/register/: page.tsx
app/campaigns/: page.tsx
app/campaigns/[id]/: page.tsx
app/campaigns/create/: page.tsx
app/dashboard/: page.tsx
components/: CampaignList.tsx  DonationChart.tsx  MilestoneForm.tsx  MilestoneVerification.tsx  Navbar.tsx  Notifications.tsx  WalletButton.tsx
components/ui/: loading-spinner.tsx
contexts/: AuthContext.tsx  WalletContext.tsx
docs/: DEPLOYMENT.md  IMPROVEMENTS.md  PROJECT_STATUS.md  TESTING.md
lib/: constants.ts  oracle.ts  program-utils.ts  solana.ts
lib/hooks/: useCampaign.ts
lib/program/: campaign.ts
program/: Cargo.toml
program/src/: lib.rs
scripts/: deploy.ts  verify.ts
tests/: campaign.test.ts  oracle.test.ts  solana.test.ts
