[package]
name = "chain-impact"
version = "0.1.0"
description = "Transparent charitable giving powered by Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chain_impact"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.18.26"